Fix modals not having a proper z-index in Mobile Safari, fixes #190

--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -119,6 +119,9 @@ $modal-overlay-background: rgba(#333, 0.7) !default;
     align-items: center;
     justify-content: center;
 
+    // Prevent z-index issue in Mobile Safari
+    -webkit-transform: translate3d(0,0,0);
+
     &.is-active {
       display: flex;
     }
